<!DOCTYPE resources [<!ENTITY appname "Office Glider">
    <!ENTITY googleMapKey "YOUR_GOOGLE_API_KEY">
    <!ENTITY privacyPolicyUrl "https://shuttle.ridein.in/#/privacy-policy"> <!--//Update this with your Privacy PolicyUrl-->
    <!ENTITY termCondUrl "https://shuttle.ridein.in/#/terms"> <!--//Update this with your termCondUrl-->
    <!ENTITY countryCode "+91">]>
<resources>
    <string name="app_name" translatable="false">&appname;</string>

    <string name="google_maps_key" translatable="false">AIzaSyAmB3N1lgruRy6NsYHNb9xGMm-_E7sf1CU</string>
    <string name="txt_country_code" translatable="false">&countryCode;</string>

    <string name="url_privacy" translatable="false">&privacyPolicyUrl;</string>
    <string name="url_terms" translatable="false">&termCondUrl;</string>

    <!--Update this with your Privacy PolicyUrl and termCondUrl-->
    <string name="txt_term_and_policy"><![CDATA[<p>By continuing, you agree to our <a href=\"https://shuttle.ridein.in/#/terms\">terms of service</a> and <a href=\"https://shuttle.ridein.in/#/privacy-policy\">privacy policy</a><p>]]></string>


    <string name="facebook_app_id" translatable="false">301405571447628</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb301405571447628</string>

    <string name="lbl_bus_routes">Bus Routes</string>
    <string name="title_passenger_list">Passenger List</string>
    <string name="title_stopes_details">Stops Details</string>

    <string name="start_with_phone_no">Start with Phone no</string>
    <string name="hint_enter_your_contact_number">Enter Contact Number</string>
    <string name="lbl_email">Email :</string>
    <string name="title_language_setting">Language Settings</string>
    <string name="lbl_language">Language :</string>
    <string name="txt_english_us">English-US</string>
    <string name="lbl_first_name">First Name :</string>
    <string name="lbl_last_name">Last Name :</string>
    <string name="lbl_gender">Gender :</string>

    <string name="lbl_help_support">Help and Support</string>
    <string name="hint_enter_your_emailid">Enter Your Email Id</string>
    <string name="msg_email_valid">Enter Valid Email</string>
    <string name="msg_valid_mobile_number">Enter Valid Mobile number</string>
    <string name="msg_mobile_number">Mobile number required</string>
    <string name="msg_description">Description required</string>

    <string name="hint_email">Enter Email ID</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_verification">Enter your verification code \n we have just sent you on your mobile number</string>
    <string name="payment_info_message">Payment info, ride details and important updates will be sent to this number</string>

    <string name="txt_verify">Verify</string>
    <string name="txt_Resend">Re-send</string>
    <string name="text_you_want_to">Welcome to</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="lbl_continue">Continue</string>
    <string name="text_signinwith">Sign In With</string>
    <string name="changed_number">Changed your number? Find your account</string>
    <string name="verification">Verification</string>
    <string name="profile_settings">Profile</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_submit">Submit</string>
    <string name="home">Home</string>
    <string name="text_phone">Phone :</string>
    <string name="hint_enter_first_name">Enter First Name</string>
    <string name="hint_enter_last_name">Enter Last Name</string>
    <string name="text_save">Save</string>
    <string name="msg_code">Code required</string>
    <string name="text_description">Description</string>
    <string name="text_logout">Logout</string>
    <string name="msg_logout">Are you sure, you want to logout?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_totalseat">Total Seat:</string>
    <string name="text_seat_no">Seat No</string>
    <string name="text_settings">Settings</string>

    <string name="text_close">Close</string>
    <string name="text_version">Version :</string>
    <string name="letsgo">  Let\'s Go  </string>
    <string name="lbl_todays_sch">TODAY \'S SCHEDULES</string>
    <string name="lbl_start_ride">Active Ride Details</string>
    <string name="lbl_passenger_list">Passenger List</string>
    <string name="title_your_name">Your Name</string>
    <string name="title_your_contact">Your Contact</string>
    <string name="title_note">Note:- In case for correction &amp; mobile number update contact owner.</string>
    <string name="hint_gender">Gender</string>

    <string name="lbl_profile">Profile</string>
    <string name="something_wrong">Please try again, Something went wrong.</string>
    
    <!-- Network Error Messages -->
    <string name="error_no_internet">No internet connection. Please check your network settings.</string>
    <string name="error_timeout">Request timeout. Please check your internet connection and try again.</string>
    <string name="error_network">Network error. Please check your connection and try again.</string>
    <string name="error_something_wrong">Something went wrong. Please try again later.</string>
    
    <string name="lbl_allow">Allow</string>
    <string name="lbl_no_trips_available">No Trips Available</string>
    <string name="title_stops">Bus Stops</string>
    <string name="lbl_no_passenger">No Passenger on this stop</string>
    <string name="lbl_close">Close</string>

    <string name="background_permission_denied_explanation">Background location permission was denied but needed for enhanced functionality.</string>
    <string name="background_location_permission_rationale">The background location permission is needed for enhanced functionality.</string>
    <string name="settings">Settings</string>
    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied, but is needed for core functionality.</string>

    <string name="ok">OK</string>
    <string name="txt_start_ride">Start Ride</string>
    <string name="txt_finish_ride">Finish Ride</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="pls_wait_loading">Please wait loading...</string>
    <string name="txt_alert">Alert!!</string>
    <string name="msg_driver_offline_alert">You can\'t go offline when you have a booking assigned.</string>
    <string name="driver_offline_trip_start_alert">"You can't start the trip when you are offline.Please go back to home screen, set yourself online and then try again."</string>
    <string name="driver_offline_trip_end_alert">You can\'t end the trip when you are offline.Please go back to home screen, set yourself online and then try again.</string>
    <string name="logout_alert_msg">You will be logged out for security reasons. Sorry for the inconvenience please login again.</string>
    <string name="session_expire">Session Expire.!!</string>
    <string name="network_alert">Please check your internet Connection</string>
    <string name="shuttle">Shuttle</string>
    <string name="llb_passenger">Passenger</string>
    <string name="current_time">Current Time</string>
    <string name="start_at">START AT</string>
    <string name="end_at">END AT</string>
    <string name="navigate_ride">Navigate Route</string>
    <string name="no_notification_available">No Notification Available</string>
    <string name="permission_alert_msg">Help the customer by giving us the location permissions.</string>
    <string name="permission_alert_description">&appname; collects location data to show customer bus routes even when the app is closed or not in use.</string>
    <string name="location_permission_txt">Location (show your routes)</string>
    <string name="notification_permission_txt">Notification (for receiving booking related notifications)</string>
    <string name="camera_permission_txt">Camera &amp; Storage (for profile image)</string>
    <string name="lbl_lest_get_started">Lets get started</string>
    <string name="driver_name">Driver Name</string>
    <string name="share_and_earn">Share &amp; Earn</string>
    <string name="my_account">My Account</string>
    <string name="logout">Log out</string>
    <string name="lbl_active_ride">ACTIVE RIDE</string>
    <string name="lbl_from">FROM</string>
    <string name="to">TO</string>
    <string name="lbl_location_permission_required">Location Permission Required.</string>
    <string name="lbl_location_permission_required_msg">Location permission is required to find the rides near you.</string>
    <string name="lbl_allow_permission">Allow Permission</string>
    <string name="lbl_allow_background_permission">Allow Background Permission</string>
    <string name="intro_txt_1">Make every ride save and easy with us.</string>
    <string name="seconds_left">seconds left</string>
    <string name="active_schedule">ACTIVE SCHEDULE</string>
    <string name="invalid_otp">Invalid OTP, please try again with new otp.</string>
    <string name="text_totalseat_left">Total Seat Left</string>
    <string name="text_change_language">Change language</string>
    <string name="this_language_is_already_set">This language is already set.</string>

    <string name="update_available">Update available</string>
    <string name="new_version_with_updated_features_available_on_the_play_store_please_update_the_application_to_continue">A new version with updated features is available on the play store. Please update the application to continue.</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="title_more">More</string>

    <string-array name="language">
        <item>Language</item>
        <item>English</item>
        <item>हिन्दी</item>
    </string-array>

    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="please_accept_our_terms_and_conditions">Please accept our Terms and Conditions.</string>
    <string name="policy_policy">Privacy Policy</string>

    <!--  -->
    <string name="text_nextstop" translatable="false">Noida Sec 12</string>
    <string name="txt_todo" translatable="false">TODO</string>
    <string name="text__2" translatable="false">2</string>
    <string name="text_mobile" translatable="false">+91 9988998899</string>
    <string name="only_numbers" translatable="false">0123456789</string>
    <string name="msg_passanger_dtls">Which passenger details you wanna see?</string>
    <string name="text_pickUp">PickUp</string>
    <string name="text_drop">Drop</string>
    <string name="you_cant_start_this_trip_before_time">You can not start the trips before its time.</string>

    <string name="txt_date">Date</string>
    <string name="lbl_payment">Total Fare</string>
    <string name="txtColon">:</string>
    <string name="txt_bus_name">Bus Name</string>
    <string name="txt_passenger">Passengers</string>
    <string name="lbl_pnr_no">PNR No.</string>
    <string name="lbl_passenger_dtls">Passenger Details</string>
    <string name="text_bus_no">Bus No</string>
    <string name="title_ticket_details">Ticket Details</string>
    <string name="text_onboard">Onboard</string>
    <string name="you_cant_start_this_trip">You cant start this trip when another trip is running</string>
    <string name="mode">Mode :</string>
    <string name="date">Date :</string>

</resources>