<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_height="wrap_content">


    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/driverOnOffSwitch"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_25sdp"
        android:textSize="@dimen/_10sdp"
        app:colorBorder="@color/light_grey"
        app:colorDisabled="@color/gray"
        app:colorOff="@color/colorPrimaryDark"
        app:colorOn="@color/white"
        app:on="false"
        app:textOff="@string/offline"
        app:textOn="@string/online"
        android:elevation="@dimen/_5sdp"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_toLeftOf="@+id/ivNotification"
        android:visibility="gone"/>


    <ImageView
        android:id="@+id/ivNotification"
        android:layout_width="@dimen/spacing_mlarge"
        android:layout_height="@dimen/spacing_mlarge"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:padding="@dimen/spacing_small"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_notification_4_line"
        android:contentDescription="@string/txt_todo"/>

    <TextView
        android:id="@+id/tvNotificationCount"
        android:layout_width="@dimen/notification_size"
        android:layout_height="@dimen/notification_size"
        android:layout_alignTop="@id/ivNotification"
        android:layout_alignEnd="@id/ivNotification"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:background="@drawable/bg_shape_notification"
        android:gravity="center"
        android:text="@string/text__2"
        android:textColor="@color/textheader"
        android:textSize="@dimen/font_small"
        android:visibility="gone" />
</RelativeLayout>