<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_alert_msg"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="22dp" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_app_round_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/permission_alert_description"
            android:textColor="@color/textheader"
            android:textSize="15dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|left"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_dote"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:text="@string/location_permission_txt"
                android:textColor="@color/textheader"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_dote"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:text="@string/notification_permission_txt"
                android:textColor="@color/textheader"
                android:textSize="15dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_dote"
                android:drawablePadding="10dp"
                android:gravity="center|left"
                android:text="@string/camera_permission_txt"
                android:textColor="@color/textheader"
                android:textSize="15dp"
                android:visibility="gone"/>

        </LinearLayout>

<!--
        <include
            android:id="@+id/progress_bar"
            layout="@layout/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:visibility="gone" />
-->


    </LinearLayout>


    <Button
        android:id="@+id/btnPermsnAllw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:background="@drawable/bg_btn_shape"
        android:fontFamily="@font/googlesansbold"
        android:shadowColor="@color/blue"
        android:text="@string/lbl_allow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />


</LinearLayout>