<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="@dimen/spacing_large"
    android:paddingEnd="@dimen/spacing_large"
    tools:context="com.shuttleclone.driver.ui.Activity.SignInActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesansbold"
                android:text="@string/text_you_want_to"
                android:textColor="@color/textchild"
                android:textSize="@dimen/font_xlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesansextrabold"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_xxxlarge" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_img__height"
                android:paddingTop="@dimen/spacing_large"
                android:src="@drawable/ic_travel" />

            <LinearLayout
                android:id="@+id/llMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/bg_selected_rounded"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_contentColor="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tvCounty_Code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/txt_country_code"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/spacing_small"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_normal"
                    android:visibility="gone"/>


                <View
                    android:layout_width="@dimen/viewheight"
                    android:layout_height="@dimen/spacing_mlarge"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:background="@color/colorPrimary" />

                <EditText
                    android:id="@+id/edMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:maxLength="10"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"
                    android:digits="@string/only_numbers"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:textColor="@color/textchild" />

            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@drawable/bg_btn_shape"
                android:fontFamily="@font/googlesansbold"
                android:shadowColor="@color/blue"
                android:text="@string/lbl_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/spacing_mlarge">

                <TextView
                    android:id="@+id/txt_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:fontFamily="@font/googlesansbold"
                    android:text="@string/text_signinwith"
                    android:textColor="@color/textheader"
                    android:textSize="@dimen/font_large" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewheight"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:layout_toStartOf="@+id/ivFacebook"
                    android:layout_toEndOf="@+id/txt_connect"
                    android:background="@color/view_color" />

                <ImageView
                    android:id="@+id/ivFacebook"
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="@dimen/spacing_mlarge"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ivGoogle"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/spacing_small"
                    android:src="@drawable/ic_facebook_fill" />

                <ImageView
                    android:id="@+id/ivGoogle"
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="@dimen/spacing_mlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/spacing_small"
                    android:src="@drawable/ic_google_fill" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvCl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:fontFamily="@font/googlesansbold"
                    android:text="@string/text_change_language"
                    android:textColor="@color/textheader"
                    android:textSize="@dimen/font_large" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewheight"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:layout_toStartOf="@+id/spChangeLanguage"
                    android:layout_toEndOf="@+id/tvCl"
                    android:background="@color/view_color" />

                <Spinner
                    android:id="@+id/spChangeLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/googlesansbold"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_large" />

                <TextView
                    android:id="@+id/tvChangeLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:fontFamily="@font/googlesansbold"
                    android:text="@string/lbl_language"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/font_large"
                    android:visibility="gone"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvTermsPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/txt_term_and_policy"
                android:gravity="center"
                android:fontFamily="@font/googlesansbold"
                android:textColor="@color/textheader"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>